--- a/about.html
+++ b/about.html
@@ -150,13 +150,13 @@
     <section id="about" class="container">
       <div class="intro-container">
         <div class="intro-image">
-          <img src="./static/images/about/portrait.png" alt="Jemima Abu">
+          <img src="./static/images/about/portrait.png" alt="Ditlev Kræn">
         </div>
         <div class="intro">
-          <h1 class="section-title">Hello, I'm Jemima Abu &#128578;</h1>
-          <p class="bold-text"> I’m a self-taught Front End Developer and school-taught
-            Systems Engineer from Nigeria.
-            I build websites with a focus on responsiveness, accessibility and pleasing aesthetics.</p>
+          <h1 class="section-title">Hejsa velkommen til min verden</h1>
+          <p class="bold-text"> Her inde skriver jeg om hvad nisserne på høloftet hvisker om 
+            når de tror jeg er faldet i søvn.
+            Jeg fortæller nogle historier om hvad jeg går og laver, og hvad for nogle tanker der susser gennem knolden på mig</p>
         </div>
       </div>
     </section>
@@ -169,8 +169,9 @@
         </summary>
         <div class="main-text">
           <p>
-            I first started coding sometime in 2017 after taking a C# course in my 2nd year of university. The very
-            first thing I built was a command-line GPA calculator (<a
+            Lige nu er jeg på udflugt i Japan. Jeg har lavet denne her hjemmeside for at kunne fortælle 
+            lidt om hvordan min tur her i Japan går. Udover det så gad jeg også godt at lave en hjemmeside, så jeg tænkte
+            at slå to flyer med et smæk.(<a
               href="https://github.com/jemimaabu/GPA-Calculator-C-" target="_blank" rel="noopener">legacy
               code here</a> for posterity)
             and from then, I was
