--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="msapplication-navbutton-color" content="#1a324c">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="description"
-    content="Jemima Abu is a self-taught Front End Developer and school-taught Systems Engineer from Lagos, Nigeria.">
+    content="Ditlevs beretninger fra Japan">
   <link rel="stylesheet" href="static/css/main.css" />
   <link rel="stylesheet" href="static/css/index.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="static/images/favicon/apple-touch-icon.png" />
@@ -509,17 +509,7 @@
     }
   </style>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3FM96129M"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-Y3FM96129M');
-  </script>
-
-  <title>Jemima Abu: Front End Developer</title>
+  <title>beretninger fra Japan</title>
 </head>
 
 <body>
@@ -527,16 +517,16 @@
     <div class="fixed-header animate-background">
       <div class="container header-container">
         <div class="logo-container">
-          <span class="logo animate-logo">Jemima Abu</span>
+          <span class="logo animate-logo">Ditlev Kræn</span>
         </div>
         <div class="header-text">
           <h1>
-            <p class="animate-text-1">Self-taught Front End Developer,</p>
-            <p class="animate-text-2">School-taught Systems Engineer</p>
+            <p class="animate-text-1">Velkommen mine damer og herre,</p>
+            <p class="animate-text-2">Ævl og bævl og andre røverhistorier</p>
           </h1>
         </div>
         <h2 class="animate-subtitle">
-          I build websites with a focus on responsive design and accessibility.
+          Lommefilosofi, fald-i-søvn-poesi, og andet der holder én varm om søndagen.
         </h2>
         <div class="scroll-button animate-scroll" tabindex="0">
           <div class="arrow">↓</div> scroll
@@ -547,7 +537,7 @@
   <nav>
     <div class="container">
       <a href="/" class="nav-logo" title="Back to Homepage">
-        Jemima Abu
+        Ditlev Kræn
       </a>
       <div class="nav-links">
         <a href="about" class="link">about</a>
@@ -555,19 +545,19 @@
         <a href="talks" class="link">talks</a>
         <a href="articles" class="link">articles</a>
         <div class="social-media">
-          <a href="https://www.github.com/jemimaabu" title="Github">
+          <a href="https://www.github.com/dotlev title="Github">
             <i class="demo-icon icon-github-circled"></i>
           </a>
-          <a href="https://www.twitter.com/jemimaabu" title="Twitter">
+          <a href="https://www.twitter.com" title="Twitter">
             <i class="demo-icon icon-twitter"></i>
           </a>
-          <a href="https://jemimaabu.medium.com" title="Medium">
+          <a href="https://medium.com" title="Medium">
             <i class="demo-icon icon-medium"></i>
           </a>
-          <a href="https://codepen.io/jemimaabu" title="Codepen">
+          <a href="https://codepen.io" title="Codepen">
             <i class="demo-icon icon-codeopen"></i>
           </a>
-          <a href="https://www.linkedin.com/in/jemimaabu" title="LinkedIn">
+          <a href="https://www.linkedin.com" title="LinkedIn">
             <i class="demo-icon icon-linkedin"></i>
           </a>
         </div>
@@ -659,30 +649,22 @@
     <section id="about">
       <div class="container inner-container">
         <div class="intro scroll-in">
-          <h2 class="section-title">Hello, I'm Jemima Abu <span class="title-icon">&#128578;</span></h2>
+          <h2 class="section-title">Jeg prøver lige at lave det her sejt <span class="title-icon">&#128578;</span></h2>
           <div class="section-subtitle">
-            <p> I'm a self-taught Front End Developer and school-taught Systems Engineer from Nigeria.</p>
+            <p> Jeg ved ikke rigtig noget om hjemmesider så det hele er lidt hulter til bulter</p>
             <p>
-              I've been <a href="about#history">building websites since 2017</a> with a focus on responsive
-              design,
-              accessibility and pleasing
-              aesthetics.</p>
+              Jeg fandt en hjemmeside med samme layout som det her, og så stjald jeg fanme bare lortet
+              men nu sidder jeg her og skal prøve at finde ud af hvordan jeg laver det til min egen.
+              </p>
             <p>
-              I've <a href="talks">spoken at multiple international conferences</a> on a variety of topics
-              ranging from web accessibility to
-              career development.
+              Forhåbentligt kan jeg få det til at due. Min plan er at prøve at gøre det meget simpelt, så 
+              jeg kan fylde mere og mere på hen ad vejen.
             </p>
-            <p>I also <a href="articles">write articles</a> and I have my works published on <a
-                href="https://jemimaabu.medium.com/" target="_blank" rel="noopener">Medium</a>,
-              <a href="https://blog.jemimaabu.com" target="_blank" rel="noopener">Hashnode</a>, <a
-                href="https://www.freecodecamp.org/news/author/jemima/" target="_blank" rel="noopener">freeCodeCamp</a>,
-              <a href="https://css-tricks.com/author/jemima/" target="_blank" rel="noopener">CSSTricks</a>
-              and
-              <a href="https://tutsplus.com/authors/jemima-abu" target="_blank" rel="noopener">Envato Tuts</a> .
+            <p>Nu må vi se om det kan lade sig gøre. Neden under er der en knap, prøv at tryk på den hvis du tør.
             </p>
           </div>
           <div class="section-link">
-            <a href="about" class="link-btn">More About Me</a>
+            <a href="about" class="link-btn">Tør du hva?</a>
           </div>
         </div>
       </div>
