--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     <section id="about">
       <div class="container inner-container">
         <div class="intro scroll-in">
-          <h2 class="section-title">Jeg prøver lige at lave det her sejt <span class="title-icon">&#128578;</span></h2>
+          <h2 class="section-title">Jeg prøver lige at lave det her sejt </h2>
           <div class="section-subtitle">
             <p> Jeg ved ikke rigtig noget om hjemmesider så det hele er lidt hulter til bulter</p>
             <p>
@@ -680,10 +680,9 @@
     <section id="projects">
       <div class="container">
         <div class="title-container scroll-in">
-          <h2 class="section-title">Featured Projects <span class="title-icon">&#128187;</span></h2>
+          <h2 class="section-title">Så lad os se hvad vi kkan finde på her </h2>
           <p class="section-subtitle">
-            I do most of my work under contract but I tend to freelance from time to time or build projects for fun.
-            Here are some of my most recent commercial projects:
+            Jeg kan vist putte billeder ind, men det gider jeg ikke, så jeg skriver bare ny tekst:
           </p>
         </div>
         <div class="project-container">
@@ -694,12 +693,14 @@
             <div class="project-content-container">
               <div class="project-content">
                 <h3 class="project-title">
-                  <a href="https://trainella.com" target="_blank" rel="noopener"> Trainella </a>
+                  <a href="https://trainella.com" target="_blank" rel="noopener"> Godt stræk </a>
                 </h3>
                 <div class="project-description">
-                  <p>I built this project for a client after attending her yoga class. She wanted a WordPress site with
-                    a more custom layout so I used an existing WordPress theme and tweaked it with about 500 lines of
-                    additional CSS.</p>
+                  <p>Hun ser godt nok glad ud. Jeg gad godt lave noget mere yoga. Egentlig tror jeg min krop er i meget godt stand.
+                    Måske lige på nær mine lunger og mit tandkød (det må du undskylde mor), men mine hofter. For satan mine hofter.
+                    De dur bare ikke. Min ven andras sidder altid med meget spredte ben så har bedt ham om at hjælpe mig. På onsdag
+                    skal vi i fitness og lave noget udstræk det blir godt.
+                  </p>
                   <!-- <p>
                     One Sunday in June, I attended a free yoga class that I saw online. After the class, I got to
                     talking
@@ -737,14 +738,14 @@
               <div class="project-content">
                 <h3 class="project-title">
                   <a href="http://unilagconsult.com.ng/cybercamp" target="_blank" rel="noopener">
-                    Unilag Consult Cyber Camp
+                    Diktat
                   </a>
                 </h3>
                 <div class="project-description">
                   <p>
-                    I was contracted to build the website for the University of Lagos Consult Cyber Camp.
-                    It was a 10-page project that I worked on with a team of one other person and it took us a rather
-                    hectic two days to design and launch.
+                    Ham den ene der snyder. Han sidder sgu da og kigger efter. Come on. På den anden side så har jeg tyv stjålet
+                    hele leyoutet til denne her hjemmeside, og jeg er for doven til at skifte billederne... NåNå hva ellers...
+                    Det vist en eller anden cyber camp. Det er altså bare et navn der holder, cyber camp. Virkelig god rebranding til os nørder. Stærkt gået team!
                   </p>
                   <!-- <p>
                     The inspiration behind the design was something along the lines of: provide as much information as
@@ -771,14 +772,13 @@
             <div class="project-content-container">
               <div class="project-content">
                 <h3 class="project-title">
-                  My Portfolio
+                  Det den rigtige hjemmeside...
                 </h3>
                 <div class="project-description">
                   <p>
-                    This is the fourth version of my portfolio website. With this version, I wanted to keep the code as
-                    basic as possible but still make the site interactive so all the animations and transitions on the
-                    page
-                    are done with vanilla JavaScript and CSS.
+                    Kæft mand, jeg stjæler med arme og ben. Men skid hul i det. Hvis i synes det er flot, så tjek hende ud
+                    JEMIMA ABU, det er fanme flot gået, hun er selvlært. Så shout out Jemima, tak for det du gamle. Og så skal 
+                    det altså også lige siges at hun skriver på GitHub man godt må kigge efter.
                   </p>
                 </div>
                 <ul class="project-tags">
