--- a/index.html
+++ b/index.html
@@ -810,132 +810,131 @@
     <section id="talks">
       <div class="container">
         <div class="title-container scroll-in">
-          <h2 class="section-title">Featured Talks <span class="title-icon">&#127908;</span></h2>
+          <h2 class="section-title">Video video <span class="title-icon">&#127908;</span></h2>
           <p class="section-subtitle">
-            I like to speak at tech conferences on a variety of topics ranging from web accessibility to career
-            development. Here are videos from my past talks:
+            Tror måske jeg kan putte videoer ind her. Helt klart, nu blir det sjovt.
           </p>
         </div>
         <div class="talks-container">
           <div class="card scroll-in">
             <div class="card-image">
-              <a href="https://www.youtube.com/watch?v=lFzWAsA76DU"
-                title="Accessible.JS - Jemima Abu - CityJS Conf 2020" target="_blank" rel="noopener">
-                <img src="./static/images/talks/accessible-js.jpeg" alt="Accessible.JS - Jemima Abu - CityJS Conf 2020"
+              <a href="https://youtu.be/SDtAh9IwG-I?si=UtJ88eiJDHDEJoPZ"
+                title="Hvor stort er et foton?" target="_blank" rel="noopener">
+                <img src="./static/images/talks/grundtvig.jpeg" alt="Accessible.JS - Jemima Abu - CityJS Conf 2020"
                   width="480" height="360">
               </a>
             </div>
             <div class="card-content">
               <h3 class="card-title">
-                Accessible.JS
+                Hvor stort er et foton?
               </h3>
               <div class="card-description">
                 <p>
-                  CityJS Conf 2020
+                  Det ved jeg ikke
                 </p>
               </div>
             </div>
           </div>
           <div class="card scroll-in">
             <div class="card-image">
-              <a href="https://www.youtube.com/watch?v=QSXdTuD9Rak"
+              <a href="https://youtu.be/5EcQ1IcEMFQ?si=M9fjC0v5cIuI0Q6C"
                 title="Understanding Accessibility as a Concept | Jemima Abu | CascadiaJS 2020" target="_blank"
                 rel="noopener">
-                <img src="./static/images/talks/understanding-accessibility.jpeg"
+                <img src="./static/images/talks/mennekse.jpeg"
                   alt="Understanding Accessibility as a Concept | Jemima Abu | CascadiaJS 2020" width="480"
                   height="360">
               </a>
             </div>
             <div class="card-content">
               <h3 class="card-title">
-                Understanding Accessibility as a Concept
+                Sådan blev du klog
               </h3>
               <div class="card-description">
                 <p>
-                  CascadiaJS 2020
+                  og tingene blir sikkert klogere:0
                 </p>
               </div>
             </div>
           </div>
           <div class="card scroll-in">
             <div class="card-image">
-              <a href="https://www.youtube.com/watch?v=a0CmIEH44vg"
-                title="Jemima Abu - State Management for React Applications at React Live Conference Online"
+              <a href="https://youtu.be/zhQlcMHhF3w?si=vBOF3TuUGoGM7OWn"
+                title="Pas godt på jer selv"
                 target="_blank" rel="noopener">
-                <img src="./static/images/talks/state-management.jpeg"
+                <img src="./static/images/talks/kristus.jpeg"
                   alt="Jemima Abu - State Management for React Applications at React Live Conference Online" width="480"
                   height="360">
               </a>
             </div>
             <div class="card-content">
               <h3 class="card-title">
-                State Management for React Applications
+                Pas godt på jer selv børn
               </h3>
               <div class="card-description">
                 <p>
-                  React Live Conference Online
+                  Ellers dør i fanme!
                 </p>
               </div>
             </div>
           </div>
           <div class="card scroll-in">
             <div class="card-image">
-              <a href="https://www.youtube.com/watch?v=TEvxRKd2suc"
-                title="Redux Middleware for React Applications by Jemima Abu from  Telesoftas  at 84th Devclub.lv"
+              <a href="https://youtu.be/PpPYEqbeznM?si=rixclVHQYF_9oOyb"
+                title="Alt helligt"
                 target="_blank" rel="noopener">
-                <img src="./static/images/talks/redux-middleware.jpeg"
+                <img src="./static/images/talks/lilleduts.jpeg"
                   alt="Redux Middleware for React Applications by Jemima Abu from  Telesoftas  at 84th Devclub.lv"
                   width="480" height="360">
               </a>
             </div>
             <div class="card-content">
               <h3 class="card-title">
-                Redux Middleware for React Applications
+                Alt der falder fra himmelen er ikke helligt
               </h3>
               <div class="card-description">
                 <p>
-                  84th Devclub.lv
+                  Samba!!
                 </p>
               </div>
             </div>
           </div>
           <div class="card scroll-in">
             <div class="card-image">
-              <a href="https://www.youtube.com/watch?v=YGPxUK5Ksuw"
+              <a href="https://youtu.be/iDG65ESEqZk?si=YGz3kQoUiBe6mCqK"
                 title="Defining A Career Path in Technology - Jemima Abu - Women Tech Network" target="_blank"
                 rel="noopener">
-                <img src="./static/images/talks/tech-career.jpeg"
+                <img src="./static/images/talks/byggebob.jpeg"
                   alt="Defining A Career Path in Technology - Jemima Abu - Women Tech Network" width="480" height="360">
               </a>
             </div>
             <div class="card-content">
               <h3 class="card-title">
-                Defining A Career Path in Technology
+                Min yyyyyndlings bog
               </h3>
               <div class="card-description">
                 <p>
-                  Women Tech Network
+                  Bogen om vejen
                 </p>
               </div>
             </div>
           </div>
           <div class="card scroll-in">
             <div class="card-image">
-              <a href="https://www.youtube.com/watch?v=11NNrrbKKgU"
+              <a href="https://youtu.be/0Trz6NvsUQQ?si=DejRnfOGSXuR53mi"
                 title="React Components and How To Style Them - Jemima Abu - React Summit 2020" target="_blank"
                 rel="noopener">
-                <img src="./static/images/talks/react-style.jpeg"
+                <img src="./static/images/talks/monkepuke.jpeg"
                   alt="React Components and How To Style Them - Jemima Abu - React Summit 2020" width="480"
                   height="360">
               </a>
             </div>
             <div class="card-content">
               <h3 class="card-title">
-                React Components and How To Style Them
+                Hvad hvis vi lavede en permakultur sammen
               </h3>
               <div class="card-description">
                 <p>
-                  React Summit 2020
+                  Vil du hjælpe med opvasken?
                 </p>
               </div>
             </div>
