update, index, about, photos

--- a/about.html
+++ b/about.html
@@ -19,17 +19,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3FM96129M"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
 
-    gtag('config', 'G-Y3FM96129M');
-  </script>
 
-  <title>Jemima Abu: About Me</title>
+  <title>Ditlev Kræn: About Me</title>
 </head>
 
 <body>
@@ -171,41 +163,20 @@
           <p>
             Lige nu er jeg på udflugt i Japan. Jeg har lavet denne her hjemmeside for at kunne fortælle 
             lidt om hvordan min tur her i Japan går. Udover det så gad jeg også godt at lave en hjemmeside, så jeg tænkte
-            at slå to flyer med et smæk.(<a
-              href="https://github.com/jemimaabu/GPA-Calculator-C-" target="_blank" rel="noopener">legacy
-              code here</a> for posterity)
-            and from then, I was
-            hooked.
+            at slå to flyer med et smæk.
           </p>
           <p>
-            I knew I enjoyed figuring out the logic behind creating applications but I was more interested in learning
-            how to make it look pretty to users. That's how I started my <a href="https://linkedin.com/in/jemimaabu"
-              target="_blank" rel="noopener">career</a> in front end development.
+            Men før jeg gør det skal jeg regne ud hvordan man overhovedet laver en hjemmeside. 
           </p>
           <p>
-            I’m constantly trying to learn new technologies and concepts and I try to share my knowledge by <a
-              href="articles">writing
-              articles</a> and <a href="talks">speaking</a> at conferences.
+            Og det er ikke så nemt, men jeg øver mig. Nu prøver jeg at lave et link til hvor min musik er <a
+              href="articles">LYD</a> og <a href="talks">Soundcloud</a> selvom jeg ikke har lavet den del af siden endnu.
           </p>
           <p>
-            I enjoy building fun designs on <a href="https://codepen.io/Jemimaabu" target="_blank"
-              rel="noopener">Codepen</a> and
-            time-saving projects on <a href="https://github.com/jemimaabu" target="_blank" rel="noopener">Github</a>. I
-            also publish
-            beginner-friendly
-            articles on <a href="https://hashnode.com/@jemimaabu" target="_blank" rel="noopener">Hashnode</a>
-            and <a href="https://www.freecodecamp.org/news/author/jemima/" target="_blank"
-              rel="noopener">freeCodeCamp</a>.</p>
-          <p>
-            I’m very dedicated to diversity and inclusion in the tech space so I try to <a
-              href="#volunteering">volunteer my time</a> and support initiatives targeted
-            towards minorities and provide direct mentorship to people who look like me.
+            Rom blev heller ikke bygget på en dag.
           </p>
           <p>
-            Currently, I’m focused on moving to the next stage of my career and achieving mid-level developer status.
-          </p>
-          <p>
-            Thanks for reading &#128522;
+            Tak for tiltroen!
           </p>
         </div>
       </details>
