--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     }
   </style>
 
-  <title>beretninger fra Japan</title>
+  <title>Ditlev Kræn Andersen</title>
 </head>
 
 <body>
@@ -956,90 +956,91 @@
     <section id="articles">
       <div class="container">
         <div class="title-container scroll-in">
-          <h2 class="section-title">Featured Articles <span class="title-icon">&#128466;</span></h2>
+          <h2 class="section-title">Kreative Projekter <span class="title-icon">&#128466;</span></h2>
           <p class="section-subtitle">
-            I write the type of articles I would want to read when trying to understand a new concept or develop a
-            skill. Here are some things I've written recently:
+            Måske det her skulle lede hen til kreative projekter, eller alternative ting jeg har fået tiden til at gå med?:
           </p>
         </div>
         <div class="articles-container">
           <div class="article scroll-in">
             <div class="article-image">
-              <a href="https://dev.to/jemimaabu/how-to-learn-javascript-4g9a"
+              <a href="https://soundcloud.com/ditlevkraen/spakone-sangen"
                 target="_blank" rel="noopener">
-                <img src="./static/images/articles/learn-javascript.png"
-                  alt="How To Learn JavaScript">
+                <img src="./static/images/articles/spåkone.png"
+                  alt="Spåkone Sangen">
               </a>
             </div>
             <div class="article-content">
               <div class="article-site">
-                <a href="https://dev.to/jemimaabu/how-to-learn-javascript-4g9a"
-                  target="_blank" rel="noopener">DEV.TO</a>
+                <a href="https://soundcloud.com/ditlevkraen/spakone-sangen"
+                  target="_blank" rel="noopener">LYD</a>
               </div>
               <h3 class="article-title">
-                <a href="https://dev.to/jemimaabu/how-to-learn-javascript-4g9a"
+                <a href="https://soundcloud.com/ditlevkraen/spakone-sangen"
                   target="_blank" rel="noopener">
-                  How To Learn JavaScript
+                  Spåkone Sangen
                 </a>
               </h3>
               <div class="article-description">
                 <p>
-                  In this article, we'll discover what JavaScript is, what it's used for,
-                  and recommend some courses to help you start your JS learning journey.
+                  Den her sang fandt jeg på i foråret 2023 mens jeg sad på i lille hemmelige hule ude i risskov. 
+                  Optagelsen foregik 2 dage før jeg rejste til Japan, så det hele er meget skraldet, men nogle gange
+                  skal man bare gøre noget.
                 </p>
               </div>
             </div>
           </div>
           <div class="article scroll-in">
             <div class="article-image">
-              <a href="https://www.freecodecamp.org/news/beginners-guide-to-creating-a-portfolio-website/"
+              <a href="https://soundcloud.com/ditlevkraen/eldorado"
                 target="_blank" rel="noopener">
-                <img src="./static/images/articles/portfolio-guide.png"
-                  alt="A Beginner's Guide To Creating A Portfolio Website">
+                <img src="./static/images/articles/Eldorado.png"
+                  alt="Eldorado">
               </a>
             </div>
             <div class="article-content">
               <div class="article-site">
-                <a href="https://www.freecodecamp.org/news/beginners-guide-to-creating-a-portfolio-website/"
-                  target="_blank" rel="noopener">freecodecamp</a>
+                <a href="https://soundcloud.com/ditlevkraen/eldorado"
+                  target="_blank" rel="noopener">LYD</a>
               </div>
               <h3 class="article-title">
-                <a href="https://www.freecodecamp.org/news/beginners-guide-to-creating-a-portfolio-website/"
+                <a href="https://soundcloud.com/ditlevkraen/eldorado"
                   target="_blank" rel="noopener">
-                  I Helped 6 Developers Set Up Their Portfolio Website. Here's What I Learned.
+                  Eldorado
                 </a>
               </h3>
               <div class="article-description">
                 <p>
-                  In this article, we'll cover everything you need to know about setting up your portfolio site - from
-                  choosing a domain name to deploying the site online.
+                  Den her sang var lang tid udnervejs. Alle på mit gamle kollegie kender den nu. Jeg brugte nok en 3 måneders tid
+                  på at optage den. Men jeg er stolt, der mangler lidt, men jeg synes den rykker.
                 </p>
               </div>
             </div>
           </div>
           <div class="article scroll-in">
             <div class="article-image">
-              <a href="https://webdesign.tutsplus.com/tutorials/animate-on-scroll-with-javascript--cms-36671"
+              <a href="https://soundcloud.com/ditlevkraen"
                 target="_blank" rel="noopener">
-                <img src="./static/images/articles/js-scroll.png"
-                  alt="Handling Scroll Based Animation With Vanilla JavaScript">
+                <img src="./static/images/articles/soundcloud.png"
+                  alt="Soundcloud">
               </a>
             </div>
             <div class="article-content">
               <div class="article-site">
-                <a href="https://webdesign.tutsplus.com/tutorials/animate-on-scroll-with-javascript--cms-36671"
-                  target="_blank" rel="noopener">envatotuts+</a>
+                <a href="https://soundcloud.com/ditlevkraen"
+                  target="_blank" rel="noopener">LYD</a>
               </div>
               <h3 class="article-title">
-                <a href="https://webdesign.tutsplus.com/tutorials/animate-on-scroll-with-javascript--cms-36671"
+                <a href="https://soundcloud.com/ditlevkraen"
                   target="_blank" rel="noopener">
-                  Handling Scroll Based Animation With Vanilla JavaScript
+                  Her regner jeg med at ligge mere musik ud.
                 </a>
               </h3>
               <div class="article-description">
                 <p>
-                  In this article, we'll explore how to implement a scroll-based styling on a page using native methods
-                  in vanilla JavaScript and CSS and how to optimize these methods for accessibility and performance.
+                  Nu skal jeg lige hjem, men jeg flytter sammen med min ven kris, og han spiller også musik. Jeg
+                  regner med at vi kommer til at finde på en masse fede ting. Jeg har så mange sange klar, de skal
+                  bare optages.
                 </p>
               </div>
             </div>
